Fix: Update Repo url in the github action

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -23,8 +23,8 @@ jobs:
       - name: Push
         uses: s0/git-publish-subdir-action@develop
         env:
-          REPO: self
+          REPO: git@github.com:giturls/giturls.github.io.git
           BRANCH: master # push to the master branch
-          FOLDER: build #
+          FOLDER: build # push the generated build
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # GitHub will automatically add this - you don't need to bother getting a token
           MESSAGE: "Build: ({sha}) {msg}" # The commit message
