Feat: Add base commponent structure

--- a/package.json
+++ b/package.json
@@ -19,9 +19,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "airbnb"
-    ]
+    "extends": []
   },
   "browserslist": {
     "production": [
