--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "eslint-config-airbnb": "^19.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
+    "redux-form": "^8.3.8",
     "sass": "^1.49.0",
     "web-vitals": "^2.1.4"
   },
